force-app/main/default/objects/InsurancePolicy/fields/Insurance_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Certificate__c</fullName>
    <description>##Conga created button:00bf0000000kQEt</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0xf000000XVPgrAAH&quot; + 
&quot;&amp;queryid=[PolicyProductDetail]a0pf0000003GTIsAAO&quot; + 

&quot;&amp;QMode=SalesforceFile&quot; +

&quot;&amp;SC0=1&quot; +

&quot;&amp;SC1=SalesforceFile&quot;</formula>
    <label>Insurance Certificate</label>
    <type>Text</type>
</CustomField>