force-app/main/default/objects/InsurancePolicy/fields/Insurance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Insurance Manager)</relationshipLabel>
    <relationshipName>Policies3</relationshipName>
    <type>Lookup</type>
</CustomField>