force-app/main/default/objects/InsurancePolicy/fields/Intital_Policy_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Intital_Policy_Purchased_Date__c</fullName>
    <inlineHelpText>Date on which the policy was purchased initially</inlineHelpText>
    <label>Intital Policy Purchased Date</label>
    <type>Date</type>
</CustomField>