force-app/main/default/objects/InsurancePolicy/fields/Intital_Policy_Terms__c.field-meta.xml
<CustomField>
    <fullName>Intital_Policy_Terms__c</fullName>
    <inlineHelpText>Purchased Policy Terms (eg: advisor purchased policy after 6 months so terms will be 6)</inlineHelpText>
    <label>Initial Policy Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>