force-app/main/default/objects/InsurancePolicy/fields/Is_Firm_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Is_Firm_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Firm Insurance?</label>
    <type>Checkbox</type>
</CustomField>