force-app/main/default/objects/InsurancePolicy/fields/Is_policy_name_set__c.field-meta.xml
<CustomField>
    <fullName>Is_policy_name_set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_policy_name_set</label>
    <type>Checkbox</type>
</CustomField>