force-app/main/default/objects/InsurancePolicy/fields/Master_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Master_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>