force-app/main/default/objects/InsurancePolicy/fields/Master_Policy_Index__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Index__c</fullName>
    <label>Master Policy Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>