force-app/main/default/objects/InsurancePolicy/fields/Master_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Number__c</fullName>
    <inlineHelpText>Master Policy Number of an Insurance Certificate</inlineHelpText>
    <label>Master Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>