force-app/main/default/objects/InsurancePolicy/fields/Mid_Term_Changes_Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Mid_Term_Changes_Last_Reviewed_Date__c</fullName>
    <label>Mid Term Changes Last Reviewed Date</label>
    <type>Date</type>
</CustomField>