force-app/main/default/objects/InsurancePolicy/fields/Mid_term_conga_template__c.field-meta.xml
<CustomField>
    <fullName>Mid_term_conga_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mid term conga template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Policies (Mid term conga template)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>