force-app/main/default/objects/InsurancePolicy/fields/Mid_term_status__c.field-meta.xml
<CustomField>
    <fullName>Mid_term_status__c</fullName>
    <label>Mid-Term Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>