force-app/main/default/objects/InsurancePolicy/fields/Minimum_Retained_Premium__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Retained_Premium__c</fullName>
    <inlineHelpText>Minimum retained premium of policy</inlineHelpText>
    <label>Minimum Retained Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>