force-app/main/default/objects/InsurancePolicy/fields/Monthly_rate2__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rate2__c</fullName>
    <formula>PremiumAmount  / Intital_Policy_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>