force-app/main/default/objects/InsurancePolicy/fields/months_difference__c.field-meta.xml
<CustomField>
    <fullName>months_difference__c</fullName>
    <formula>IF(
(ExpirationDate - NOW()) / 365 * 12 &lt; 1, 1, (ExpirationDate - NOW()) / 365 * 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>months difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>