force-app/main/default/objects/InsurancePolicy/fields/Name_Insured_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Name_Insured_Account_Id__c</fullName>
    <formula>NameInsured.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Insured Account Id</label>
    <type>Text</type>
</CustomField>