force-app/main/default/objects/InsurancePolicy/fields/Name_insured_billing_address__c.field-meta.xml
<CustomField>
    <fullName>Name_insured_billing_address__c</fullName>
    <formula>NameInsured.BillingStreet &amp; &quot;, &quot; &amp;
 NameInsured.BillingCity &amp; &quot;, &quot; &amp;
 NameInsured.BillingState &amp; &quot;, &quot; &amp;
 NameInsured.BillingPostalCode &amp; &quot;, &quot; &amp;
	NameInsured.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name insured billing address</label>
    <type>Text</type>
</CustomField>