force-app/main/default/objects/InsurancePolicy/fields/Name_Insured_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Name_Insured_For_Email_Template__c</fullName>
    <formula>IF( NameInsured.RecordType.DeveloperName=&apos;PersonAccount&apos; ,  NameInsured.FirstName ,  NameInsured.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Insured For Email Template</label>
    <type>Text</type>
</CustomField>