force-app/main/default/objects/InsurancePolicy/fields/NameInsurance_F__c.field-meta.xml
<CustomField>
    <fullName>NameInsurance_F__c</fullName>
    <formula>NameInsured.BillingStreet + &apos;, &apos; + NameInsured.BillingCity + &apos;, &apos; + NameInsured.BillingState + &apos;, &apos; + NameInsured.BillingPostalCode + &apos;, &apos; +  NameInsured.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameInsurance__F</label>
    <type>Text</type>
</CustomField>