force-app/main/default/objects/InsurancePolicy/fields/Next_Related_Item__c.field-meta.xml
<CustomField>
    <fullName>Next_Related_Item__c</fullName>
    <label>Next Related Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Policy Wording and Endorsements</fullName>
            </value>
            <value>
                <fullName>Extended Report Periods</fullName>
            </value>
            <value>
                <fullName>Insurers</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Underlying Insurers</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>