force-app/main/default/objects/InsurancePolicy/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <label>Person Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>