force-app/main/default/objects/InsurancePolicy/fields/Policy_fee_total__c.field-meta.xml
<CustomField>
    <fullName>Policy_fee_total__c</fullName>
    <label>Policy fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>