force-app/main/default/objects/InsurancePolicy/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy Holder of the policy</inlineHelpText>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Policy Holder)</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>