force-app/main/default/objects/InsurancePolicy/fields/Policy_Index__c.field-meta.xml
<CustomField>
    <fullName>Policy_Index__c</fullName>
    <defaultValue>000000</defaultValue>
    <label>Policy Index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>