force-app/main/default/objects/InsurancePolicy/fields/Policy_LImit__c.field-meta.xml
<CustomField>
    <fullName>Policy_LImit__c</fullName>
    <label>Policy LImit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>