force-app/main/default/objects/InsurancePolicy/fields/Policy_Option__c.field-meta.xml
<CustomField>
    <fullName>Policy_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Option</label>
    <referenceTo>Policy_Option__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>