force-app/main/default/objects/InsurancePolicy/fields/Policy_Terms__c.field-meta.xml
<CustomField>
    <fullName>Policy_Terms__c</fullName>
    <inlineHelpText>For how many months the policy will be effective</inlineHelpText>
    <label>Policy Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>