force-app/main/default/objects/InsurancePolicy/fields/Project_Area__c.field-meta.xml
<CustomField>
    <fullName>Project_Area__c</fullName>
    <label>Project Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>