force-app/main/default/objects/InsurancePolicy/fields/Project_Risk_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Risk_Address__c</fullName>
    <label>Project / Risk Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>