force-app/main/default/objects/InsurancePolicy/fields/Purchased_Premium__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Premium__c</fullName>
    <label>Purchased Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>