force-app/main/default/objects/InsurancePolicy/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Quote from where policy originated.</inlineHelpText>
    <label>Source Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>