force-app/main/default/objects/InsurancePolicy/fields/Quote_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Product Detail</label>
    <referenceTo>Quote_Product_Details__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>