force-app/main/default/objects/InsurancePolicy/fields/Record_Type_Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Formula_Fields__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Formula Field</label>
    <type>Text</type>
</CustomField>