force-app/main/default/objects/InsurancePolicy/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>