force-app/main/default/objects/InsurancePolicy/fields/Renewal_Quote__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Policies (Renewal Quote)</relationshipLabel>
    <relationshipName>RenewalPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>