force-app/main/default/objects/InsurancePolicy/fields/Retroactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Date__c</fullName>
    <inlineHelpText>Retroactive date of the policy</inlineHelpText>
    <label>Retroactive Date</label>
    <type>Date</type>
</CustomField>