force-app/main/default/objects/InsurancePolicy/fields/Send_Document_When_Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Send_Document_When_Address_Changed__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;qvar0id=a0pf0000003X535AAC&quot; + 
&quot;&amp;qvar0format=10000&quot; + 
&quot;&amp;templateid={QVar0}&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; +  Broker__r.Id +
&quot;&amp;emailtemplateid=a0of0000003OQZ9AAO&quot; + 
&quot;&amp;emailadditionalto=&quot; +  Owner:User.Email +
&quot;&amp;qmode=SalesforceFile&quot; + 
&quot;&amp;sc0=1 &quot; + 
&quot;&amp;sc1=SalesforceFile&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Document When Address Changed</label>
    <type>Text</type>
</CustomField>