force-app/main/default/objects/InsurancePolicy/fields/ShortRateAmount__c.field-meta.xml
<CustomField>
    <fullName>ShortRateAmount__c</fullName>
    <label>ShortRateAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>