force-app/main/default/objects/InsurancePolicy/fields/Subjectivities__c.field-meta.xml
<CustomField>
    <fullName>Subjectivities__c</fullName>
    <inlineHelpText>Subjectivities of policy</inlineHelpText>
    <label>Subjectivities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>