force-app/main/default/objects/InsurancePolicy/fields/Template_Ids2__c.field-meta.xml
<CustomField>
    <fullName>Template_Ids2__c</fullName>
    <label>Template Ids2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>