force-app/main/default/objects/InsurancePolicy/fields/Template_Ids3__c.field-meta.xml
<CustomField>
    <fullName>Template_Ids3__c</fullName>
    <label>Template Ids3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>