force-app/main/default/objects/InsurancePolicy/fields/Template_Ids__c.field-meta.xml
<CustomField>
    <fullName>Template_Ids__c</fullName>
    <label>Template Ids1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>