force-app/main/default/objects/InsurancePolicy/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; +  Template_Ids__c  &amp;  Template_Ids2__c &amp;  Template_Ids3__c +
&quot;&amp;QueryStringField=CGL_Queries__c&quot; +
&quot;&amp;QueryStringField1= CGL_Queries_2__c &quot; +
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;qmode=congasign&quot; + &quot;&amp;csvisible=1&quot; + &quot;&amp;csrecipient1=&quot; + Broker__r.Id</formula>
    <label>COC [CGL] Trigger - Send Via CongaSig</label>
    <type>Text</type>
</CustomField>