force-app/main/default/objects/InsurancePolicy/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; + Template_Ids__c &amp; Template_Ids2__c &amp; Template_Ids3__c  +
&quot;&amp;QueryStringField=CGL_Queries__c&quot; +
&quot;&amp;QueryStringField1= CGL_Queries_2__c &quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;SC0=1&quot; + 
&quot;&amp;SC1=SalesforceFile&quot; +
&quot;&amp;CongaEmailTemplateId=a0of0000003OQZ9AAO&quot; +
&quot;&amp;EmailAdditionalTo=&quot; +  Broker__r.Id +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <label>COC [CGL] Trigger - Save Attachment</label>
    <type>Text</type>
</CustomField>