force-app/main/default/objects/InsurancePolicy/fields/Test_Merge_Salesforce_File__c.field-meta.xml
<CustomField>
    <fullName>Test_Merge_Salesforce_File__c</fullName>
    <description>##Conga created button:00bf0000000oZMg</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;qvar0id=a0pf0000003GTIsAAO&quot; + 
&quot;&amp;templateid=a0xf000000XHCsdAAH,{QVar0}&quot; + 
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <label>Test Merge (Salesforce File</label>
    <type>Text</type>
</CustomField>