force-app/main/default/objects/InsurancePolicy/fields/Total_Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Insured_Value__c</fullName>
    <label>Total Insured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>