force-app/main/default/objects/InsurancePolicy/fields/Total_Policy_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Policy_fee__c</fullName>
    <formula>Policy_fee_total__c  +  PremiumAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Policy fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>