force-app/main/default/objects/InsurancePolicy/fields/Type_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cancellation__c</fullName>
    <inlineHelpText>Type of Policy Cancellation</inlineHelpText>
    <label>Type of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Rate</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Pro-Rata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>