force-app/main/default/objects/InsurancePolicy/fields/Umbrella_Queries__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Queries__c</fullName>
    <formula>IF( Product.ProductCode == &apos;UL&apos; ,&quot;&amp;queryid=[PPDExt]a0pf0000003TYKNAA4,[PIns]a0pf0000003XMDlAAO,[HCFPPD]a0pf0000003XbGXAA0,[PUI]a0pf0000003TWUxAAO,[PPE]a0pf0000003ZZ2qAAG,[PPDRA]a0pf0000003TXybAAG,[PPDCov]a0pf0000003TY9jAAG,[COCQPD]a0pf0000003XPQxAAO,[HCC]a0pf0000003ZjvVAAS,[PPDSL]a0pf0000003TYLLAA4,[PPDMR]a0pf0000003ZmGfAAK,[UMBE00101]a0pf0000003TNS5AAO,[UMBE00201]a0pf0000003TNS6AAO,[UMBE00301]a0pf0000003TNS7AAO,[UMBE00401]a0pf0000003TNS8AAO,[UMBE00501]a0pf0000003TNS9AAO,[UMBE00601]a0pf0000003TNSAAA4,[UMBE00701]a0pf0000003TNSBAA4,[UMBE00801]a0pf0000003TNSCAA4,[UMBE00901]a0pf0000003TNSDAA4,[UMBE01001]a0pf0000003TNSEAA4,[UMBE01101]a0pf0000003TNSFAA4,[UMBE01201]a0pf0000003TNSGAA4,[UMBE01301]a0pf0000003TNSHAA4,[UMBE01401]a0pf0000003TNSIAA4,[UMBE01501]a0pf0000003TNSJAA4,[UMBE01601]a0pf0000003TNSKAA4,[UMBE01701]a0pf0000003TNSLAA4,[UMBE01801]a0pf0000003TNSMAA4,[UMBE01901]a0pf0000003TNSNAA4,[UMBE02001]a0pf0000003TNSOAA4,[UMBE02101]a0pf0000003TNSPAA4,[UMBE02201]a0pf0000003TNSQAA4,[UMBE02301]a0pf0000003TNSRAA4,[UMBE02401]a0pf0000003TNSSAA4,[UMBE02501]a0pf0000003TNSTAA4,[UMBE02601]a0pf0000003TNSUAA4,[UMBE02701]a0pf0000003TNSVAA4,[UMBE02801]a0pf0000003TNSWAA4,[UMBE99701]a0pf0000003TNSZAA4,[UMBE99801]a0pf0000003TNSYAA4,[UMBE99901]a0pf0000003TNSXAA4,[UMBW00101]a0pf0000003TNS4AAO&quot;,&quot;&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Umbrella Queries</label>
    <type>Text</type>
</CustomField>