force-app/main/default/objects/InsurancePolicy/fields/Underlying_Limit_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Limit_of_Liability__c</fullName>
    <inlineHelpText>Underlying limit of liability of policy</inlineHelpText>
    <label>Underlying Limit of Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>