force-app/main/default/objects/InsurancePolicy/fields/Unearned_Premium__c.field-meta.xml
<CustomField>
    <fullName>Unearned_Premium__c</fullName>
    <formula>PremiumAmount / 12 * ( MONTH( TODAY() ) - MONTH( DATEVALUE(ExpirationDate) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unearned Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>