force-app/main/default/objects/InsurancePolicy/fields/Wrap_Up_Queries__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Queries__c</fullName>
    <formula>&quot;&amp;queryid=[WULE00101]a0pf0000003TNPYAA4,[WULE00201]a0pf0000003TNPZAA4,[WULE00301]a0pf0000003TNPaAAO,[WULE00401]a0pf0000003TNPbAAO,[WULE00501]a0pf0000003TNPcAAO,[WULE00601]a0pf0000003TNPdAAO,[WULE00701]a0pf0000003TNPeAAO,[WULE00801]a0pf0000003TNPfAAO,[WULE00901]a0pf0000003TNPgAAO,[WULE01001]a0pf0000003TNPhAAO,[WULE01101]a0pf0000003TNPiAAO,[WULE01201]a0pf0000003TNPjAAO,[WULE01301]a0pf0000003TNPkAAO,[WULE01401]a0pf0000003TNPlAAO,[WULE01501]a0pf0000003TNPmAAO,[WULE01601]a0pf0000003TNPnAAO,[WULE01701]a0pf0000003TNPoAAO,[WULE01801]a0pf0000003TNPpAAO,[WULE01901]a0pf0000003TNPqAAO,[WULE02001]a0pf0000003TNPrAAO,[WULE02101]a0pf0000003TNPsAAO,[WULE02201]a0pf0000003TNPtAAO,[WULE02301]a0pf0000003TNPuAAO,[WULE99601]a0pf0000003TNPyAAO,[WULE99701]a0pf0000003TNPxAAO,[WULE99801]a0pf0000003TNPwAAO,[WULE99901]a0pf0000003TNPvAAO,[WULW00101]a0pf0000003TNPXAA4&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wrap Up Queries</label>
    <type>Text</type>
</CustomField>