force-app/main/default/objects/InsurancePolicy/recordTypes/Insurance_Certificate.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Certificate</fullName>
    <active>true</active>
    <description>Insurance Certificate will hold information of policy holder, insured (a user of program corporation), brokerage and broker. Renewal Process of Insurance Certificate will depend upon the Master Policy/Quote Renewals which are defined in Renewal Section.</description>
    <label>Insurance Certificate</label>
</RecordType>