force-app/main/default/objects/InsurancePolicy/recordTypes/Non_Program_Policy.recordType-meta.xml
<RecordType>
    <fullName>Non_Program_Policy</fullName>
    <active>true</active>
    <description>Non-Program will hold information of policy holder, brokerage and broker as defined. Renewal Process of non-program will be directly traced from policy record.</description>
    <label>Non-Program Policy</label>
</RecordType>