force-app/main/default/objects/InsurancePolicy/recordTypes/Open_Market_Program.recordType-meta.xml
<RecordType>
    <fullName>Open_Market_Program</fullName>
    <active>true</active>
    <label>Open Market Program</label>
</RecordType>