force-app/main/default/objects/InsurancePolicy/validationRules/Active_Policy_can_not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Policy_can_not_change</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Active&apos;)  &amp;&amp; !ISCHANGED( Status )</errorConditionFormula>
    <errorMessage>You can not change active policy</errorMessage>
</ValidationRule>