force-app/main/default/objects/InsurancePolicy/validationRules/Conga_Output_Parameter.validationRule-meta.xml
<ValidationRule>
    <fullName>Conga_Output_Parameter</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status , &quot;Activated&quot;) &amp;&amp; ISPICKVAL(Conga_Transaction__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Conga_Transaction__c</errorDisplayField>
    <errorMessage>Please select conga output mode.</errorMessage>
</ValidationRule>