force-app/main/default/objects/InsurancePolicy/validationRules/Purchased_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchased_ERP</fullName>
    <active>true</active>
    <description>If the status is &quot;Purchased ERP&quot; the stage can not be changed to any previous stage.</description>
    <errorConditionFormula>AND( ISPICKVAL( Status , &apos;Purchased ERP&apos;) , 
 OR(ISPICKVAL( Status , &apos;Draft&apos;),ISPICKVAL( Status , &apos;Quoted&apos;),ISPICKVAL( Status , &apos;Pending Payment&apos;),ISPICKVAL( Status , &apos;Requested Cancellation&apos;),ISPICKVAL( Status , &apos;Active&apos;),
ISPICKVAL( Status , &apos;In Active&apos;) ,ISPICKVAL( Status , &apos;Non Renewed&apos;)) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This ERP has already been purchased.</errorMessage>
</ValidationRule>