force-app/main/default/objects/InsurancePolicy/listViews/All_Active_Non_Program_Policies.listView-meta.xml
<ListView>
    <fullName>All_Active_Non_Program_Policies</fullName>
    <columns>Name</columns>
    <columns>PolicyName</columns>
    <columns>NameInsured</columns>
    <columns>Product</columns>
    <columns>Status</columns>
    <columns>EffectiveDate</columns>
    <columns>RenewalDate</columns>
    <columns>PremiumAmount</columns>
    <columns>Policy_Index__c</columns>
    <columns>Record_Type_Formula_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>InsurancePolicy.Non_Program_Policy</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Non-Program Policies</label>
</ListView>