force-app/main/default/objects/InsurancePolicy/listViews/All_Draft_Non_Program_Policies.listView-meta.xml
<ListView>
    <fullName>All_Draft_Non_Program_Policies</fullName>
    <columns>Name</columns>
    <columns>PolicyName</columns>
    <columns>NameInsured</columns>
    <columns>Product</columns>
    <columns>Status</columns>
    <columns>EffectiveDate</columns>
    <columns>RenewalDate</columns>
    <columns>PremiumAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>InsurancePolicy.Non_Program_Policy</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All Draft Non-Program Policies</label>
</ListView>