force-app/main/default/objects/InsurancePolicy/listViews/All_Insurance_Certificates.listView-meta.xml
<ListView>
    <fullName>All_Insurance_Certificates</fullName>
    <columns>Name</columns>
    <columns>Insurance_Manager__c</columns>
    <columns>NameInsured</columns>
    <columns>Contact__c</columns>
    <columns>PolicyName</columns>
    <columns>Status</columns>
    <columns>Brokerage__c</columns>
    <columns>PolicyType</columns>
    <columns>RenewalDate</columns>
    <columns>PremiumAmount</columns>
    <filterScope>Everything</filterScope>
    <label>All Insurance Certificates</label>
</ListView>