force-app/main/default/objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>Name</columns>
    <columns>Brokerage__c</columns>
    <columns>PolicyName</columns>
    <columns>Policy_Index__c</columns>
    <columns>PolicyType</columns>
    <columns>Status</columns>
    <columns>NameInsured</columns>
    <columns>RenewalDate</columns>
    <columns>SaleDate</columns>
    <columns>IsRenewedPolicy</columns>
    <columns>PremiumAmount</columns>
    <columns>Is_policy_name_set__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Policies</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>